[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/Music/MusicController.gd" type="Script" id=1]

[node name="MusicController" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="Tween2" to="." method="_on_Tween2_tween_completed"]
